dotcom-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dotcom
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotcom-deployment
  namespace: dotcom
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotcom
  template:
    metadata:
      labels:
        app: dotcom
    spec:
      containers:
      - name: dotcom
        image: julianone/dotcom:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: dotcom-service
  namespace: dotcom
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "julian-one.com,www.julian-one.com"
spec:
  selector:
    app: dotcom
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotcom-ingress
  namespace: dotcom
  annotations:
    kubernetes.io/ingress.class: "traefik"
    external-dns.alpha.kubernetes.io/hostname: "julian-one.com,www.julian-one.com"
spec:
  rules:
  - host: julian-one.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dotcom-service
            port:
              number: 8080
  - host: www.julian-one.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dotcom-service
            port:
              number: 8080
